# smart_boat_sandbox

./: .gitignore  airflow-init.sh  docker-compose.yml  run_complete_demo.sh  shutdown_demo.sh
maritime-rl/: .env.example  .gitignore  README.md  deploy_model.py  maritime-rl-exercise.md  process_kafka_data.py  pyproject.toml  requirements.txt  store_data.py  train_model.py
maritime-rl/config/: rl_config.json
maritime-rl/dags/: __init__.py  maritime_model_training_dag.py  maritime_pipeline_dag.py
maritime-rl/docker/: Dockerfile.airflow  airflow_init.sh  docker-compose-airflow.yml  docker-compose.yml  dockerfile  init-db.sql
maritime-rl/docs/: user_guide.md
maritime-rl/scripts/: build_airflow_image.sh  check_tables.sh  generate_vessel_data.py  monitor_kafka.py  psql.sh  reset_timescaledb.sh  restart_airflow.sh  run_demo.sh  setup_airflow.sh  setup_pgadmin_connections.sh  start_airflow.sh  start_dashboard.sh  start_data_generator.sh  start_producer.sh  start_services_sequential.sh
maritime-rl/src/maritime/data/: __init__.py
maritime-rl/src/maritime/models/: maritime_environment.py  rl_agent.py  train_rl_model.py
maritime-rl/src/maritime/processors/: __init__.py  sailing_processor.py
maritime-rl/src/maritime/producers/: base_producer.py  sailing_producer.py
maritime-rl/src/maritime/schemas/: __init__.py  environmental.py
maritime-rl/src/maritime/visualization/: dashboard.py  dashboard_template.html  monte_carlo_viz.py
maritime-rl/src/maritime/visualization/templates/: dashboard_template.html  data_quality_template.html  models_template.html  monte_carlo_template.html  routes_template.html  vessels_template.html
maritime-rl/src/maritime_rl/: __init__.py
maritime-rl/src/maritime_rl/data/: generators.py
maritime-rl/src/maritime_rl/producers/: __init__.py
maritime-rl/src/maritime_rl/schemas/: sailing.py  weather.py
maritime-rl/src/maritime_rl/visualization/: dashboard.py
models/rl/monte_carlo/: mc_summary.json
models/rl/monte_carlo/vessel_1/: summary.json
scripts/: check_airflow_dag.sh  start_dashboard.sh  update_airflow.sh
