[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maritime_rl"
version = "0.1.0"
authors = [
    {name = "Maritime AI Team", email = "team@maritimeai.com"},
]
description = "A reinforcement learning system for maritime route optimization"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.5.0",
    "confluent-kafka>=2.2.0",
    "fastavro>=1.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]
viz = [
    "flask>=2.3.0",
    "matplotlib>=3.7.0",
    "psycopg2-binary>=2.9.6",
    "leaflet>=0.0.3",
]
all = [
    "maritime_rl[dev]",
    "maritime_rl[viz]",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*" 